# hjs-core

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/hjs-cli/: Cargo.toml
crates/hjs-core/src/: crypto.rs
